--- a/BACKEND/Mongoose/person/package.json
+++ b/BACKEND/Mongoose/person/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "ejs-challenge",
+  "name": "person",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "engines": {
-    "node": "14.x"
-},
-
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "ejs": "^2.6.1",
-    "express": "^4.16.3",
-    "lodash": "^4.17.21",
     "mongoose": "^6.4.4"
   }
 }
